force-app/main/default/objects/Product_Launch__c/Product_Launch__c.object-meta.xml
<CustomObject>
    <label>Product Launch</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Product Launch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Launches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>