force-app/main/default/objects/Product_Launch__c/fields/Account_Region_VP__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_VP__c</fullName>
    <formula>Account__r.Region_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region VP</label>
    <type>Text</type>
</CustomField>