force-app/main/default/objects/Product_Launch__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>give the ability to mymobility team to identify specialized accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>