force-app/main/default/objects/Product_Launch__c/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
            <value>
                <fullName>Termed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>