force-app/main/default/objects/Product_Launch__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>