force-app/main/default/objects/Product_Launch__c/fields/Actual_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_PO_Date__c</fullName>
    <description>MIS Actual PO Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual PO Date</label>
    <type>Date</type>
</CustomField>