force-app/main/default/objects/Product_Launch__c/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Architect</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Launches (Contact)</relationshipLabel>
    <relationshipName>Product_Launches</relationshipName>
    <type>Lookup</type>
</CustomField>