force-app/main/default/objects/Product_Launch__c/fields/Assigned_PDM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned PDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Launches</relationshipName>
    <type>Lookup</type>
</CustomField>