force-app/main/default/objects/Product_Launch__c/fields/Billing_Cadance__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cadance__c</fullName>
    <label>Billing Cadance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Manually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>