force-app/main/default/objects/Product_Launch__c/fields/Calendar_Year_Enrollment_Goal__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year_Enrollment_Goal__c</fullName>
    <label>Calendar Year Enrollment Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>