force-app/main/default/objects/Product_Launch__c/fields/Committed_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Opening_Date__c</fullName>
    <description>MIS Committed Opening Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Committed Opening Date</label>
    <type>Date</type>
</CustomField>