force-app/main/default/objects/Product_Launch__c/fields/Committed_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Ship_Date__c</fullName>
    <description>MIS Committed Ship Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Committed Ship Date</label>
    <type>Date</type>
</CustomField>