force-app/main/default/objects/Product_Launch__c/fields/Committed_Sign_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Sign_off_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Committed Sign Off Date</label>
    <type>Date</type>
</CustomField>