force-app/main/default/objects/Product_Launch__c/fields/Content_Built_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Content_Built_Signoff_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Built &amp; Signoff Date</label>
    <type>Date</type>
</CustomField>