force-app/main/default/objects/Product_Launch__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>ADDMONTHS(Fully_Executed_Contract_Date__c ,  Length_of_Contract__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fully Executed Contract Date + Length of Contract (months)</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>