force-app/main/default/objects/Product_Launch__c/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Notes</label>
    <type>TextArea</type>
</CustomField>