force-app/main/default/objects/Product_Launch__c/fields/Dashboard_Sent_most_recent_Date__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Sent_most_recent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dashboard Sent (most recent) Date</label>
    <type>Date</type>
</CustomField>