force-app/main/default/objects/Product_Launch__c/fields/Date_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Date_Delivered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Delivered</label>
    <type>Date</type>
</CustomField>