force-app/main/default/objects/Product_Launch__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Fee</fullName>
            </value>
            <value>
                <fullName>DRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>