force-app/main/default/objects/Product_Launch__c/fields/Delivered_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Y_N__c</fullName>
    <label>Delivered (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>