force-app/main/default/objects/Product_Launch__c/fields/Enrolling_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolling_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrolling Date</label>
    <type>Date</type>
</CustomField>