force-app/main/default/objects/Product_Launch__c/fields/Equipment_Planner__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS Equipment Planner</description>
    <label>Equipment Planner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Launches (Equipment Planner)</relationshipLabel>
    <relationshipName>Product_Launches1</relationshipName>
    <type>Lookup</type>
</CustomField>