force-app/main/default/objects/Product_Launch__c/fields/Fully_Executed_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Executed_Contract_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fully Executed Contract Date</label>
    <type>Date</type>
</CustomField>