force-app/main/default/objects/Product_Launch__c/fields/Go_live_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_live_Target_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Go-live Target Date</label>
    <type>Date</type>
</CustomField>