force-app/main/default/objects/Product_Launch__c/fields/Handoff_to_Customer_Success_Date__c.field-meta.xml
<CustomField>
    <fullName>Handoff_to_Customer_Success_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handoff to Customer Success Date</label>
    <type>Date</type>
</CustomField>