force-app/main/default/objects/Product_Launch__c/fields/Is_this_a_Phased_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Phased_Plan__c</fullName>
    <label>Is this a Phased Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>