force-app/main/default/objects/Product_Launch__c/fields/Launch_Lead__c.field-meta.xml
<CustomField>
    <fullName>Launch_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>user Lead requested by the myMobility group</description>
    <label>Launch Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Launches1</relationshipName>
    <type>Lookup</type>
</CustomField>