force-app/main/default/objects/Product_Launch__c/fields/Launch_Status__c.field-meta.xml
<CustomField>
    <fullName>Launch_Status__c</fullName>
    <label>Launch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projected Launch</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pre Kick Off</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Ready to Enroll</fullName>
            </value>
            <value>
                <fullName>Enrolling</fullName>
            </value>
            <value>
                <fullName>Customer Success Support</fullName>
            </value>
            <value>
                <fullName>Contract End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>