force-app/main/default/objects/Product_Launch__c/fields/Length_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Contract__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Months</inlineHelpText>
    <label>Length of Contract</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>