force-app/main/default/objects/Product_Launch__c/fields/MIS_Stage__c.field-meta.xml
<CustomField>
    <fullName>MIS_Stage__c</fullName>
    <label>MIS Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Commit Shipment</fullName>
            </value>
            <value>
                <fullName>Commit Install Sign-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>