force-app/main/default/objects/Product_Launch__c/fields/Monthly_Goal__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Goal__c</fullName>
    <label>Monthly Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>