force-app/main/default/objects/Product_Launch__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>