force-app/main/default/objects/Product_Launch__c/fields/Operations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operations Notes</label>
    <type>TextArea</type>
</CustomField>