force-app/main/default/objects/Product_Launch__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity__r.Owner.FirstName &amp;&apos; &apos;&amp; Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>