force-app/main/default/objects/Product_Launch__c/fields/OrthoIntel__c.field-meta.xml
<CustomField>
    <fullName>OrthoIntel__c</fullName>
    <label>OrthoIntel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>