force-app/main/default/objects/Product_Launch__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <formula>IF	(Owner:Queue.Id = &apos;00G6w000000q1HH&apos;, &quot;mymobility Queue&quot;,
	Owner:User.FirstName &amp; &quot; &quot;&amp; Owner:User.LastName
	)</formula>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>