force-app/main/default/objects/Product_Launch__c/fields/Pair_Wear_Share__c.field-meta.xml
<CustomField>
    <fullName>Pair_Wear_Share__c</fullName>
    <label>Pair / Wear / Share?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>