force-app/main/default/objects/Product_Launch__c/fields/Pre_Engagement_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Engagement_Meeting_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Engagement Meeting Date</label>
    <type>Date</type>
</CustomField>