force-app/main/default/objects/Product_Launch__c/fields/Primary_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>user Primary Consultant requested by the myMobility group</description>
    <label>Primary Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Launches2</relationshipName>
    <type>Lookup</type>
</CustomField>