force-app/main/default/objects/Product_Launch__c/fields/Product_Launch_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Launch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Launch Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>