force-app/main/default/objects/Product_Launch__c/fields/Projected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Projected End Date</label>
    <type>Date</type>
</CustomField>