force-app/main/default/objects/Product_Launch__c/fields/Protocols__c.field-meta.xml
<CustomField>
    <fullName>Protocols__c</fullName>
    <label>Protocols</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>TKA/THA/PKA</fullName>
            </value>
            <value>
                <fullName>TSA/RSA</fullName>
            </value>
            <value>
                <fullName>TAA</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Total Joint Revisions</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>