force-app/main/default/objects/Product_Launch__c/fields/Pull_Through_Revenue_Full_Term__c.field-meta.xml
<CustomField>
    <fullName>Pull_Through_Revenue_Full_Term__c</fullName>
    <label>Pull Through Revenue (Full Term)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>