force-app/main/default/objects/Product_Launch__c/fields/Pull_Through_Revenue_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Pull_Through_Revenue_Year_1__c</fullName>
    <label>Pull Through Revenue Year 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>