force-app/main/default/objects/Product_Launch__c/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Deal_Type_Surgical__c)</formula>
    <label>Purchase Type</label>
    <type>Text</type>
</CustomField>