force-app/main/default/objects/Product_Launch__c/fields/Ready_to_Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Enroll_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ready to Enroll Date</label>
    <type>Date</type>
</CustomField>