force-app/main/default/objects/Product_Launch__c/fields/Recon_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Recon_Team_Lead__c</fullName>
    <formula>Opportunity__r.Recon2_Team_Lead__r.FirstName &amp;&apos; &apos;&amp; Opportunity__r.Recon2_Team_Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recon Team Lead</label>
    <type>Text</type>
</CustomField>