force-app/main/default/objects/Product_Launch__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <description>mapped from Opportunity on Product Launch record create via flow</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>