force-app/main/default/objects/Product_Launch__c/fields/Requested_Instrument_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Instrument_Delivery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Instrument Delivery Date</label>
    <type>Date</type>
</CustomField>