force-app/main/default/objects/Product_Launch__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <formula>Opportunity__r.X2_Unit_of_Watches_Annual__c</formula>
    <inlineHelpText>Number of Seats listed on the associated Opportunity</inlineHelpText>
    <label>Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>