force-app/main/default/objects/Product_Launch__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LE</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>ROSA + mymobility</fullName>
            </value>
            <value>
                <fullName>myMobility</fullName>
                <label>mymobility</label>
            </value>
            <value>
                <fullName>ROSA</fullName>
            </value>
            <value>
                <fullName>OPJ</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>