force-app/main/default/objects/Product_Launch__c/fields/Support_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Support_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Support Consultant requested by the myMobility group</description>
    <label>Support Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Launches3</relationshipName>
    <type>Lookup</type>
</CustomField>