force-app/main/default/objects/Product_Launch__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii Standard Time</fullName>
            </value>
            <value>
                <fullName>Alaska Standard Time</fullName>
            </value>
            <value>
                <fullName>Pacific Standard Time</fullName>
            </value>
            <value>
                <fullName>Mountain Standard Time</fullName>
            </value>
            <value>
                <fullName>Central Standard Time</fullName>
            </value>
            <value>
                <fullName>Eastern Standard Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>