force-app/main/default/objects/Product_Launch__c/fields/Trays_requested_Persona__c.field-meta.xml
<CustomField>
    <fullName>Trays_requested_Persona__c</fullName>
    <inlineHelpText>Populated from Parent Opportunity on creation</inlineHelpText>
    <label>Trays requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>