force-app/main/default/objects/Product_Launch__c/fields/Vanguard__c.field-meta.xml
<CustomField>
    <fullName>Vanguard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Populated from Parent Opportunity on creation</inlineHelpText>
    <label>Vanguard</label>
    <type>Checkbox</type>
</CustomField>