force-app/main/default/objects/Product_Launch__c/fields/Watch_Program__c.field-meta.xml
<CustomField>
    <fullName>Watch_Program__c</fullName>
    <label>Watch Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program 1</fullName>
            </value>
            <value>
                <fullName>Program 2</fullName>
            </value>
            <value>
                <fullName>RPWS25 – ROSA Pair / Wear / Share ONLY</fullName>
            </value>
            <value>
                <fullName>9H0G2M – 50% off MSRP</fullName>
            </value>
            <value>
                <fullName>5B4PQD - $200 off at end</fullName>
            </value>
            <value>
                <fullName>F72AGU - $100 off at beginning, no return</fullName>
            </value>
            <value>
                <fullName>87GHTB - $100 off at end</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>