force-app/main/default/objects/Product_Launch__c/fields/X1st_Committed_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Committed_Sign_Off_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Committed Sign Off Date</label>
    <type>Date</type>
</CustomField>