force-app/main/default/objects/Product_Launch__c/fields/X2nd_Committed_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Committed_Sign_Off_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Committed Sign Off Date</label>
    <type>Date</type>
</CustomField>