force-app/main/default/objects/Product_Launch__c/fields/X2nd_Post_Go_Live_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Post_Go_Live_Meeting_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Post Go-Live Meeting Date</label>
    <type>Date</type>
</CustomField>