force-app/main/default/objects/Product_Launch__c/fields/X3rd_Committed_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Committed_Sign_Off_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Committed Sign Off Date</label>
    <type>Date</type>
</CustomField>