force-app/main/default/objects/Product_Launch__c/fields/X5_Enrollments_by_90_days__c.field-meta.xml
<CustomField>
    <fullName>X5_Enrollments_by_90_days__c</fullName>
    <label>5 Enrollments by 90 days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>