force-app/main/default/objects/Product_Launch__c/fields/X90_Days_from_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>X90_Days_from_Contract_Date__c</fullName>
    <formula>Fully_Executed_Contract_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>90 Days from Contract Date</label>
    <type>Date</type>
</CustomField>