force-app/main/default/objects/Product_Launch__c/recordTypes/MIS.recordType-meta.xml
<RecordType>
    <fullName>MIS</fullName>
    <active>true</active>
    <label>MIS</label>
</RecordType>