force-app/main/default/objects/Product_Launch__c/recordTypes/mymobility.recordType-meta.xml
<RecordType>
    <fullName>mymobility</fullName>
    <active>true</active>
    <label>mymobility</label>
</RecordType>