force-app/main/default/objects/Product_Launch__c/recordTypes/ROSA_Brain.recordType-meta.xml
<RecordType>
    <fullName>ROSA_Brain</fullName>
    <active>true</active>
    <label>ROSA Brain</label>
</RecordType>