force-app/main/default/objects/Product_Launch__c/recordTypes/ROSA_Knee.recordType-meta.xml
<RecordType>
    <fullName>ROSA_Knee</fullName>
    <active>true</active>
    <label>ROSA Knee</label>
</RecordType>