force-app/main/default/objects/Product_Launch__c/recordTypes/ROSA_Spine.recordType-meta.xml
<RecordType>
    <fullName>ROSA_Spine</fullName>
    <active>true</active>
    <label>ROSA Spine</label>
</RecordType>