force-app/main/default/objects/Product_Launch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Launch_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Launch_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>