force-app/main/default/objects/Product_Launch__c/listViews/All_MIS_Launches.listView-meta.xml
<ListView>
    <fullName>All_MIS_Launches</fullName>
    <columns>NAME</columns>
    <columns>Product_Launch_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>MIS_Stage__c</columns>
    <columns>Actual_End_Date__c</columns>
    <columns>Actual_PO_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Launch__c.MIS</value>
    </filters>
    <label>All MIS Launches</label>
</ListView>